# scavenger

./: .env.postgres  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Architecture.md  README.md  docker-compose.yaml
.github/workflows/: build.yaml  deploy.yaml
app/auctions/: auctions-api.yaml  docker-compose.yaml
app/auctions/auctions-api/: README.md  database.db  docker-compose.yaml  openapi.yaml  pyproject.toml
app/auctions/auctions-api/.openapi-generator/: FILES
app/auctions/auctions-api/src/scavenger_auctions/: main.py  security_api.py
app/auctions/auctions-api/src/scavenger_auctions/apis/: auctions_api.py  auctions_api_base.py  bids_api.py  bids_api_base.py
app/auctions/auctions-api/src/scavenger_auctions/models/: auction.py  auction_current_bid.py  auction_current_bid_customer.py  auction_list.py  bid.py  error_response.py  error_response_data.py
app/auctions/auctions-api/src/scavenger_auctions/sql_models/: core.py
app/auctions/auctions-api/tests/: conftest.py  test_auctions_api.py  test_bids_api.py
app/cms/: .dockerignore  Dockerfile  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
infrastructure/: Dockerfile.curl  data.tf  db.tf  dns.tf  iam_user.tf  lb.tf  main.tf  provider.tf  s3.tf  task_defs.tf  variables.tf
infrastructure/conf/: conf-fluentd.conf
infrastructure/k8s/: cache-cron.yaml  certificate.yaml  cms-collectstatic.yaml  cms-superuser.yaml  cms.yaml  configmaps.yaml  image-service-deployment.yaml  ingress.yaml  instagram-sync.yaml  (+7 more)
scripts/: build.sh  collectstatic.sh  createsuperuser.sh
(+125 files in other folders)
